src/test/deca/syntax/valid/improvided/assign_bool_bool.deca
// Description : 
//	Affectation d'un boolean a un boolean
// Resultats :
//	ok
{
	boolean z;
	boolean t = true;
	z = t;
}
