src/test/deca/syntax/invalid/improvided/lettre_avec_accent.deca
// Description :
// 	utilisation d'une lettre avec accent
// Resultats : 	
// 	Ligne 6 : "é" caractere invalide
{
	int é = 3;
}
